# Voyage_Optimization

./: .gitignore  requirements.txt
.claude/: CLAUDE.md  WBS_next_phases.md  commit_log.md  pickle_data_structure.md  pipeline_flow.md  speed_control_optimizer_analysis.md
Dynamic speed optimization/: CreteNodes.py  ship_parameters.yaml  speed_control_optimizer.py  utility_functions.py  weather_forecasts.yaml
Linear programing/: Gurobi.py  StaticModel.mod  extract_sog_values.py  generate_optimization_data.py  graph_generation.py  interactive_sws_calculator.py  requirements.txt  ship_speed_optimization_pulp.py  voyage_data.py
context/: Research Description.docx  modeling_approaches_comparison.md  research_description_tail.txt  weather_data_summary.md
docs/: WBS_next_phases.md  graph_rebuild_summary_2026_05_06.md  hdf5_weather_data_explained.md  meeting_prep_2026_02_23.md  meeting_prep_2026_03_02.md  meeting_prep_2026_03_09.md  meeting_prep_2026_03_16.md  meeting_prep_2026_03_23.md  meeting_prep_2026_03_30.md  meeting_prep_2026_04_13.md  meeting_prep_2026_04_20.md  meeting_prep_2026_04_27.md  meeting_prep_2026_05_04.md  meeting_prep_2026_05_11.md  meeting_prep_2026_05_18.md  meeting_prep_2026_05_25.md  meeting_prep_2026_06_01.md  meeting_prep_2026_06_15.md  meeting_prep_2026_06_29.md  meeting_prep_2026_07_06.md  meeting_prep_2026_07_13.md  method_changes_node_first.html  onepager_h_line_geo_reconstruction.md  stress_test_summary_2026_05_07.md  thesis_brainstorm.md
paper/: speed_control_v1.tex  speed_control_v1_supervisor_feedback.tex  style_guide.md
paper_workspace/: .gitignore  README.md  paper_change_log.md  paper_full_draft.md  paper_full_draft.tex  (+1 more)
pipeline/dp_cpp/: CMakeLists.txt  README.md
pipeline/dp_cpp/reference_runs/: dp_SR_route1_eta280.csv
pipeline/dp_cpp/src/: SR_main.cpp  SR_main.hpp  atomic_edges.cpp  atomic_edges.hpp  bellman.hpp  bellman_locked.cpp  bellman_locked.hpp  common.hpp  frame.cpp  frame.hpp  geo_grid.cpp  luo_main.cpp  luo_main.hpp  main.cpp  physics.hpp  route.cpp  route.hpp  run_rh.cpp  weather.cpp  weather.hpp
pipeline/dp_cpp/tests/: .gitignore
pipeline/dp_cpp/tests/golden/: luo_route1.summary  luo_route2.summary  naive_route2.summary  sr_route1.csv  sr_route2.csv  sr_route2.summary
(+477 files in other folders)
